// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should render with selected 1`] = `
<DocumentFragment>
  <div
    class="sg-mx2uls-toggle"
  >
    <span
      class="sg-1h1yc6m-label"
    >
      somelabel
    </span>
    Some, Thing, Selected
  </div>
</DocumentFragment>
`;

exports[`<Toggle /> should render with selected as open 1`] = `
<DocumentFragment>
  <div
    class="sg-mx2uls-toggle"
  >
    <span
      class="sg-1h1yc6m-label"
    >
      somelabel
    </span>
    Some, Thing, Selected
  </div>
</DocumentFragment>
`;

exports[`<Toggle /> should render without selected 1`] = `
<DocumentFragment>
  <div
    class="sg-mx2uls-toggle"
  >
    <span
      class="sg-1h1yc6m-label"
    >
      somelabel
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Toggle /> should render without selected as open 1`] = `
<DocumentFragment>
  <div
    class="sg-mx2uls-toggle"
  >
    <span
      class="sg-1h1yc6m-label"
    >
      somelabel
    </span>
  </div>
</DocumentFragment>
`;
